--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
-    "sass-loader": "^7.3.1"
+    "sass-loader": "^7.3.1",
+    "vue-youtube": "^1.3.5"
   },
   "devDependencies": {}
 }
