--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Different_World",
+  "name": "Future_World",
   "version": "1.0.0",
   "description": "My bedazzling Nuxt.js project",
   "author": "ymmy1",
