--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\Ymmy\Desktop\Course\Future_World\static\favicon.ico,0
+IconResource=C:\WINDOWS\System32\SHELL32.dll,14
 [ViewState]
 Mode=
 Vid=
