--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
     "sass-loader": "^7.3.1",
+    "vue-custom-scrollbar": "^1.2.0",
     "vue-youtube": "^1.3.5"
   },
   "devDependencies": {}
